# rust-json-parser-practise

./: Cargo.toml
src/: main.rs  nom_json.rs
