[package]
name = "rust-json-parser-practise"
version = "0.1.0"
authors = ["shapled <shapled@shapled.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
pest = "2.1.2"
pest_derive = "2.1.0"

[[bin]]
name = "json-parser"
path = "src/main.rs"
